<resources>
    <string name="app_name">CGS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="my_requests">My Requests</string>
    <string name="action_items">Action Items</string>
    <string name="no_action">No Action</string>
    <string name="pending">Pending</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="create_account_text">Don\'t have account? Create here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="pin_code">Pin Code</string>
    <string name="register">Register</string>
    <string name="content_description_navigate_back">navigate back</string>
    <string name="grievance_category">Grievance Category</string>
    <string name="enter_grievance_description">Enter Grievance Description</string>
    <string name="enter_grievance_title">Enter Grievance Title</string>
    <string name="submit">Submit</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="attachment_help">attachment help</string>
    <string name="menu_new_grievance">New Grievance</string>
    <string name="select_privacy">Select privacy</string>
    <string name="rb_private">Private</string>
    <string name="rb_public">Public</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="address">Address</string>
    <string name="globe">Globe</string>
    <string name="reset_password">Reset Password</string>
    <string name="emailid_linked_with_account">Enter Email ID linked with your account</string>
    <string name="cancel">Cancel</string>
    <string name="otp">OTP</string>
    <string name="resend_code">Resend Code?</string>
    <string name="_0_59">0:59</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="next">Next</string>
    <string name="gender">gender</string>
    <string name="country">country</string>
    <string name="state">state</string>
    <string name="district">district</string>
    <string name="personal_info">Basic Info</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_contact_info">Enter contact info</string>
    <string name="verification_Id">Verification ID</string>
    <string name="resend_token">resend_token</string>
    <string name="delete_attachment">Delete Attachment</string>
    <string name="attachment_type">Attachment Type</string>
    <string name="contact_info">Contact Info</string>
    <string name="photos">Photos</string>
    <string name="location">Location</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_current_location">Share Current location</string>
    <string name="share_selected_location">Share Selected location</string>
    <string name="get_current_location">Get Current location</string>
    <string name="confirm_sign_out_text">Do you really want to sign out?</string>
    <string name="edit">Edit</string>
    <string name="save">SAVE</string>
    <string name="resolved">Resolved</string>
    <string name="in_process">In Process</string>
    <string name="verify">Verify</string>
    <string name="address_info">Address Info</string>
    <string name="txt_profile_address">Lives in</string>
    <string name="txt_profile_country">Country :</string>
    <string name="txt_profile_state">State :</string>
    <string name="txt_profile_district">District :</string>
    <string name="txt_profile_pin_code">Pin Code :</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="gps_not_found_message">Want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="search_icon">Search Icon</string>
    <string name="place_icon">place icon</string>
    <string name="request_id">Request ID:</string>
    <string name="request_title">Request Title:</string>
    <string name="request_status">Request Status:</string>
    <string name="default_count_value">0</string>
    <string name="total">Total</string>
    <string name="menu_feed">Feed</string>
    <string name="select_grievance_category">Select Grievance Category</string>
    <string name="citizen">citizen</string>
    <string name="search">Search</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_search">Search</string>
    <string name="user_type">user_type</string>
    <string name="assign">ASSIGN</string>
    <string name="reject">REJECT</string>
    <string name="forward">FORWARD</string>
    <string name="complete">COMPLETE</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="action_title">Action Title</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="action_done">action_done</string>
    <string name="priority">Priority</string>
    <string name="requested_by">Requested by :</string>
    <string name="add_note">Add note</string>
    <string name="provide_your_feedback">Provide your feedback</string>
    <string name="mediator">mediator</string>
    <string name="handled_by">Handled by:</string>
    <string name="upvote">Upvote</string>
    <string name="upvoted">Upvoted</string>
    <string name="privacy">Privacy:</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change Language</string>
    <string name="language">Language</string>
    <string name="marathi">Marathi</string>
    <string name="english">English</string>
    <string name="selected_language">Selected Language</string>

</resources>
