<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>

        <item
            android:id="@+id/nav_search_grievance"
            android:icon="@drawable/ic_icon_magnify"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_worker_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />


    </group>

    <item android:title="@string/menu_settings">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_icon_settings"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>


</menu>
