<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtGrievanceTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/GrievanceTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_grievance_title"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtGrievanceCategory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/grievanceCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/select_grievance_category" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="3"
            android:hint="@string/enter_grievance_description"
            android:inputType="textMultiLine"
            android:maxLength="1500" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/select_privacy"

        />



    <RadioGroup
        android:id="@+id/rgTicketVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbPublic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_public" />

        <RadioButton
            android:id="@+id/rbPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_private" />


    </RadioGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachmentsRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"

        >


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:text="@string/add_attachment"
            app:icon="@drawable/ic_icon_attach_file" />

        <ImageView
            android:id="@+id/attachmentHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/attachment_help"
            android:src="@drawable/ic_icon_info" />


    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/submit" />



</LinearLayout>