<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout1"
        android:background="@drawable/bottom_line">

        <TextView
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_language"
            android:id="@+id/txtSelectedLanguage"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/selectedLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="8dp"
            android:layout_below="@id/txtSelectedLanguage"
            android:text="@string/marathi"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:layout_margin="8dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@id/relativeLayout1" />

</RelativeLayout>