<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/camera"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/camera"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_photo_camera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/photos"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/photos"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_icon_share_image" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        >


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:text="@string/location"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="5dp"
            android:layout_margin="8dp"
            app:icon="@drawable/ic_icon_pin_drop"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/document"
            android:text="@string/document"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="5dp"
            android:layout_margin="8dp"
            app:icon="@drawable/ic_icon_file"
            />


    </LinearLayout>

</LinearLayout>